--- a/oce_handbook.tex
+++ b/oce_handbook.tex
@@ -221,11 +221,11 @@ sufficient background.
 
 \cp
 
-\p A Graduate Student Program form must be submitted to the Graduate Secretary
-within one month of the start of your program.
+\p A \di{Graduate Student Program Form} must be submitted to the Graduate
+Secretary within one month of the start of your program.
 
-\p Students must submit a Graduate Student Program Update Form to the Graduate
-Secretary when a decision to make changes to course requirements is
+\p Students must submit a \di{Graduate Student Program Update Form} to the
+Graduate Secretary when a decision to make changes to course requirements is
 made\footnote{Graduate Student Program Forms can be downloaded from the FGS
 website
 \href{http://www.dal.ca/faculty/gradstudies/currentstudents/forms.html}{\ExternalLink}.}.
@@ -233,8 +233,8 @@ Failure to do so can result in the assessment of additional fees for courses
 not included in your program requirements, or affect the student's ability to
 graduate.
 
-\p In addition to the core classes as described above, there are several classes
-designed to provide students with the tools and background knowledge
+\p In addition to the core classes as described above, there are several
+classes designed to provide students with the tools and background knowledge
 appropriate to their particular area of research. As explained in sections B
 and C, the detailed requirements differ for MSc and PhD and between the
 sub-disciplines of Oceanography. The choice of classes is made by the student
@@ -273,11 +273,14 @@ on the student's official transcript.
 \cp
 
 \p Classes approved by the Department and Faculty of Graduate Studies (after
-examination of class descriptions) can be taken at other universities as part
-of the graduate degree program, provided the class is not available at
-Dalhousie\footnote{FGS Regulations, section 7.6.6: Letters of Permission
+examination of class descriptions\fixme{Q: who approves these? I've done that
+as the professor for my own course. Is that the rule, or the habit?}) can be
+taken at other universities as part of the graduate degree program, provided
+the class is not available at Dalhousie\footnote{FGS Regulations, section
+7.6.6: Letters of Permission
 \href{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10850&loaduseredits=False}{\ExternalLink}.}.
-The Letter of Permission Form\footnote{FGS forms and documents: Letter of Permission--Request Form 
+The Letter of Permission Form\footnote{FGS forms and documents: Letter of
+Permission--Request Form
 \href{http://www.dal.ca/faculty/gradstudies/currentstudents/forms.html}{\ExternalLink}.}
 must be completed and submitted to the Graduate Secretary in advance. Such
 approval will not be given retroactively.
@@ -288,22 +291,22 @@ approval will not be given retroactively.
 
 \cp
 
-\p When a particular research area has been identified and an advisory committee
-appointed, students are required to provide their advisory committees with
-detailed thesis proposals. This document, typically developed in collaboration
-with the supervisor, should demonstrate the student's
+%\p When a particular research area has been identified and an advisory committee
+%appointed, students are required to provide their advisory committees with
+%detailed thesis proposals. This document, typically developed in collaboration
+%with the supervisor, should demonstrate the student's
+%
+%\begin{itemize}
+%\item Background of appropriate literature
+%\item Awareness of current research activity
+%\item Ability to formulate pertinent scientific hypotheses
+%\item Appreciation of the time, effort, and resources necessary to achieve the thesis objectives
+%\end{itemize}
 
-\begin{itemize}
-\item Background of appropriate literature
-\item Awareness of current research activity
-\item Ability to formulate pertinent scientific hypotheses
-\item Appreciation of the time, effort, and resources necessary to achieve the thesis objectives
-\end{itemize}
-
-\p The acceptance of a thesis proposal is a critical step in a student's program.
-The detailed requirements differ for MSc and PhD proposals (see
-sections~\ref{sec:msc_program_requirements}
-and~\ref{sec:phd_program_requirements} respectively).
+%\p The acceptance of a thesis proposal is a critical step in a student's program.
+\p For the requirements for \di{thesis proposal}s in the MSc and PhD proposals
+see sections~\ref{sec:msc_thesis_proposal} and~\ref{sec:phd_thesis_proposal}
+respectively.
 
 %A4	SEA TIME
 \subsection{Sea time}
@@ -441,9 +444,9 @@ and/or supervisor. It is the responsibility of the student to ensure that
 committee meetings are held. The supervisor will ensure that brief minutes of
 these meetings are recorded and are filed with the Graduate Secretary.
 
-\p Following approval of the research proposal by the advisory committee, the
-student should have several meetings in addition to the regular committee
-meetings as follows:
+\p Following approval of the \di{research proposal} by the \advcom, the student
+should have several meetings in addition to the regular committee meetings as
+follows:
 
 \begin{itemize}
 
@@ -472,8 +475,8 @@ committee may request further revision prior to approving a defence.
 \p At several points in a student's program the approval of the advisory committee is essential:
 \begin{itemize}
 \item Initial discussion of research plan and direction; this should occur as early as possible in the student's program.
-\item Approval of research plan and direction for thesis proposal.
-\item Acceptance of a thesis proposal.
+\item Approval of research plan and direction for \di{thesis proposal}.
+\item Acceptance of a \di{thesis proposal}.
 \item Change of status, such as advancement to the PhD program.
 \item Approval to write up sections of a thesis.
 \item Approval of draft of thesis.
@@ -517,12 +520,25 @@ who is a faculty member in the Department.
 \cp
 
 \p The responsibilities of the internal supervisor in part are
+
 \begin{itemize}
-\item To advise on academic requirements, course load, waiver of courses, general departmental affairs, etc.
+
+\item To advise on academic requirements, course load, waiver of courses,
+    general departmental affairs, etc.
+
 \item To ensure that the student has suitable office and laboratory space.
-\item In consultation with the student, to select a supervisor and advisory committee appropriate to the student's research interests (In many cases the chair will also be the supervisor).
-\item To ensure that adequate reports and records of committee meetings are kept and submitted to the appropriate departmental files, and that necessary decisions as to the academic program, (e.g.. thesis proposal), are made on an appropriate time-scale.
+
+\item In consultation with the student, to select a supervisor and advisory
+    committee appropriate to the student's research interests (In many cases
+    the chair will also be the supervisor).
+
+\item To ensure that adequate reports and records of committee meetings are
+    kept and submitted to the appropriate departmental files, and that
+    necessary decisions as to the academic program, (e.g. thesis proposal), are
+    made on an appropriate time-scale.
+
 \item To assess the progress of the student both in academic work and research.
+
 \end {itemize}
  
 
@@ -561,27 +577,30 @@ committee be from outside the Department.
 
 
 %B3	MSc THESIS PROPOSAL
-\subsection{MSc thesis proposal}
+\subsection{\label{sec:msc_thesis_proposal}MSc thesis proposal}
 
 \cp
 
-\p MSc students are expected to produce an approved proposal within one year of
-enrolling in the program.
+\p MSc students are expected to produce an approved \di[thesis
+proposal!MSc]{thesis proposal} within one year of enrolling in the program.
 
-\p The thesis proposal should be developed in consultation with the supervisor and
-advisory committee. The scope of the research should be such that it can be
-accomplished and the thesis written within one year. Students should consult
-with their supervisors on the content of a proposal.
+\p The \di[thesis proposal!MSc]{thesis proposal} should be developed in
+consultation with the supervisor and advisory committee. The scope of the
+research should be such that it can be accomplished and the thesis written
+within one year. Students should consult with their supervisors on the content
+of a proposal.
 
-\p The Supervisor will notify the Oceanography Office that the proposal
-requirement has been satisfied and a copy of the approved proposal must be
-placed on file with the Graduate Secretary. MSc students may be required to
-defend the research proposal at the discretion of their committee.
+\p The Supervisor will notify the Oceanography Office that the \di[thesis
+proposal!MSc]{proposal} requirement has been satisfied and a copy of the
+approved proposal must be placed on file with the Graduate Secretary. MSc
+students may be required to defend the research proposal at the discretion of
+their committee.
 
-\p Because a large portion of a student's first year is consumed by course work,
-the thesis proposal serves primarily as a well-reasoned course of action, and
-not as an exhaustive literature review nor as a deeply detailed description of
-methods. Fifteen pages of text should provide ample space.
+\p Because a large portion of a student's first year is consumed by course
+work, the \di[thesis proposal!MSc]{thesis proposal} serves primarily as a
+well-reasoned course of action, and not as an exhaustive literature review nor
+as a deeply detailed description of methods. Fifteen pages of text should
+provide ample space.
 
 
 %B4	MSc THESIS
@@ -1041,26 +1060,27 @@ on the topics arising during the oral defence.
 \end{itemize}
 
 % C4	PhD THESIS PROPOSAL AND DEFENCE
-\subsection{PhD thesis proposal and defence}
+\subsection{\label{sec:phd_thesis_proposal}PhD thesis proposal and defence}
 
 \cp
 
-\p PhD students are expected to complete the proposal and examination of the
-proposal within 20 months of enrolling in the graduate program.
+\p PhD students are expected to complete the \di[thesis proposal!PhD]{thesis
+proposal} and examination of the proposal within 20 months of enrolling in the
+graduate program.
 
 \p The advisory committee sets the exact timing.
 
-\p In order to proceed with the proposal, the student will have completed the
-required first year courses, have a named supervisor and advisory committee,
-and received approval from the supervisor.
+\p In order to proceed with the \di[thesis proposal!PhD]{proposal}, the student
+will have completed the required first year courses, have a named supervisor
+and advisory committee, and received approval from the supervisor.
 
-\p The requirement consists of a written thesis proposal and a public oral
-defence.  The written proposal will include an overview of the research topic
-and relevant background material, and a plan for carrying out the PhD research.
-The oral portion is a defence of the proposal, including other relevant areas
-of Oceanography. The topics covered in the defence may relate not just to the
-planned research, but also to wider oceanographic issues, as deemed appropriate
-by the defence committee.
+\p The requirement consists of a written \di[thesis proposal!PhD]{thesis
+proposal} and a public oral defence.  The written proposal will include an
+overview of the research topic and relevant background material, and a plan for
+carrying out the PhD research.  The oral portion is a defence of the proposal,
+including other relevant areas of Oceanography. The topics covered in the
+defence may relate not just to the planned research, but also to wider
+oceanographic issues, as deemed appropriate by the defence committee.
 
 \p The defence is open to attendance by all interested persons, except for the
 in-camera portion in which the decision is made by the examining committee.
