add disclaimer to cover page

--- a/oce_handbook.tex
+++ b/oce_handbook.tex
@@ -96,6 +96,16 @@
 
 \begin{document}
 \maketitle
+
+\textbf{Disclaimer.} The guidelines in this handbook supplement, but do not,
+and cannot, reduce the requirements listed in the rules and regulations
+published in the Graduate Studies Calendar of Dalhousie University.  As such,
+this document adds further requirements that students must accomplish in order
+to complete a degree program in Oceanography.  Such additional prerequisites
+are permitted by Graduate Studies.  In the event of a real or perceived
+conflict in such stipulations, Graduate Studies (FGS) requirements and rules
+shall prevail.
+
 \newpage
 
 \renewcommand{\baselinestretch}{0.5}\normalsize
@@ -104,7 +114,6 @@
 \tableofcontents
 }
 \renewcommand{\baselinestretch}{1.0}\normalsize
-
 
 \section{\label{sec:glossary}Glossary of acronyms and terms}
 
@@ -126,7 +135,6 @@ document.
         Council, a funding agency.
 
 \end{itemize}
-
 
 % A.	GENERAL  PROGRAM REQUIREMENTS
 \section{\label{sec:general_program_requirements}General Program Requirements}
