add sea time section

--- a/oce_handbook.tex
+++ b/oce_handbook.tex
@@ -321,13 +321,60 @@ respectively.
 
 \cp
 
-\p Graduate students in Oceanography are required to spend time at sea on
-oceanographic ships to familiarize themselves with oceanographic techniques,
-even if their research does not require measurements at sea. Students are
-required to submit a \di[sea time]{Sea Time} Form to the Graduate Secretary.
-The \curcom must approve completed forms. Requests for special consideration by
-the \curcom for \di{fieldwork} in lieu of sea time may be made in extenuating
-circumstances.
+% \p Graduate students in Oceanography are required to spend time at sea on
+% oceanographic ships to familiarize themselves with oceanographic techniques,
+% even if their research does not require measurements at sea. Students are
+% required to submit a \di[sea time]{Sea Time} Form to the Graduate Secretary.
+% The \curcom must approve completed forms. Requests for special consideration by
+% the \curcom for \di{fieldwork} in lieu of sea time may be made in extenuating
+% circumstances.
+
+\p The Department of Oceanography has a longstanding tradition of requiring our
+graduate students to go to sea\index{sea time} on research cruises as part of
+their degree requirements. This tradition meets several objectives of our
+graduate education:
+
+\begin{itemize}
+
+    \item Sea time directly exposes students of all backgrounds and research
+        interests to the rewards and challenges of gathering data at sea;
+
+    \item Sea time offers the opportunity to network with other scientists in a
+        unique and stimulating environment.
+
+    \item Sea time provides practical education about how to solve problems that
+        arise when outside assistance is not readily at hand;
+
+    \item \di[sea time]{Sea time} emphasizes the importance of practicing
+        expeditionary behaviour whereby adherence to safe procedures and
+        maintenance of clear and open communication are paramount;
+
+\end{itemize}
+
+\p Arrangements to meet the \di{sea time} requirement are the responsibility of
+the student in consultation with the supervisor. Financial costs associated
+with meeting the \di{sea time} requirement should be borne either by the
+supervisor, a travel grant, or an outside investigator funded to participate in
+the research cruise. In general \fixme{is this phrase ok? Another choice might
+be ``normally'' or ``usually.'' I think CTT has expressed opinions on how to
+phrase such things.} ``sea time'' means spending 3 or more nights at sea on a
+research vessel that is conducting active research. Students are required to
+submit a \index{forms!sea time}\di{Sea Time Form} to the Graduate Secretary
+after completion of this requirement, and the \curcom must approve completed
+forms.
+
+\p In a limited set of extenuating circumstances, students may have the
+sea-time requirement waived and replaced with commensurate experience. For
+example, students facing physical or mental challenges to working at sea,
+students with extensive experience at sea prior to coming to Dalhousie, or
+students with demanding nearshore/intertidal field research projects that limit
+time available to go to sea may be granted a waiver of the sea-time
+requirement. To apply for a waiver, the student composes a letter to the
+\curcom stating the reason for the request and proposing commensurate
+replacement experience. An accompanying letter supporting the student’s request
+must be composed by the supervisor and signed by the supervisory committee. The
+decision to grant or deny the request for a sea time waiver is the
+responsibility of the \curcom.
 
 
 % A5	SEMINARS
